changes and fixes

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,5 +1,5 @@
 <html><head> <title>Website</title> <style>body {background-color: Yellow; text-align: center;</style></head><body>
-                    <form  action="signup.html">
+                    <form  action="signup.py">
                           <button type="submit">sign Up</button>
                           </form>
                           <h1 style="text-align:center;">  <b>To Do list</b>  </h1>
